legacy/pdu/pal/src/pdmr/y.output

state 0
	$accept : _whole_condition $end 

	_c_column_name  shift 7
	_c_string  shift 10
	_c_int_value  shift 8
	_c_real_value  shift 9
	.  error

	whole_condition  goto 1
	complex_condition  goto 2
	condition  goto 3
	expression  goto 4
	operand  goto 5
	value  goto 6

state 1
	$accept :  whole_condition_$end 

	$end  accept
	.  error


state 2
	whole_condition :  complex_condition_    (1)
	complex_condition :  complex_condition_conj condition 

	_c_outside_or  shift 12
	_c_outside_and  shift 13
	.  reduce 1

	conj  goto 11

3: reduce/reduce conflict (red'ns 2 and 4 ) on $end
state 3
	whole_condition :  condition_    (2)
	complex_condition :  condition_    (4)

	$end  reduce 2
	.  reduce 4


state 4
	condition :  expression_oper expression 
	condition :  expression__c_equal $$8 _c_string 
	condition :  expression__c_not_equal $$10 _c_string 
	expression :  expression_oper operand 

	_c_greater  shift 17
	_c_greater_equal  shift 18
	_c_less  shift 19
	_c_less_equal  shift 20
	_c_equal  shift 15
	_c_not_equal  shift 16
	.  error

	oper  goto 14

state 5
	expression :  operand_    (13)

	.  reduce 13


state 6
	operand :  value_    (14)

	.  reduce 14


state 7
	operand :  _c_column_name_    (15)

	.  reduce 15


state 8
	value :  _c_int_value_    (22)

	.  reduce 22


state 9
	value :  _c_real_value_    (23)

	.  reduce 23


state 10
	value :  _c_string_    (24)

	.  reduce 24


state 11
	complex_condition :  complex_condition conj_condition 

	_c_column_name  shift 7
	_c_string  shift 10
	_c_int_value  shift 8
	_c_real_value  shift 9
	.  error

	condition  goto 21
	expression  goto 4
	operand  goto 5
	value  goto 6

state 12
	conj :  _c_outside_or_    (5)

	.  reduce 5


state 13
	conj :  _c_outside_and_    (6)

	.  reduce 6


state 14
	condition :  expression oper_expression 
	expression :  expression oper_operand 

	_c_column_name  shift 7
	_c_string  shift 10
	_c_int_value  shift 8
	_c_real_value  shift 9
	.  error

	expression  goto 22
	operand  goto 23
	value  goto 6

15: reduce/reduce conflict (red'ns 21 and 8 ) on _c_string
state 15
	condition :  expression _c_equal_$$8 _c_string 
	oper :  _c_equal_    (21)
	$$8 : _    (8)

	_c_string  reduce 8
	.  reduce 21

	$$8  goto 24

16: reduce/reduce conflict (red'ns 20 and 10 ) on _c_string
state 16
	condition :  expression _c_not_equal_$$10 _c_string 
	oper :  _c_not_equal_    (20)
	$$10 : _    (10)

	_c_string  reduce 10
	.  reduce 20

	$$10  goto 25

state 17
	oper :  _c_greater_    (16)

	.  reduce 16


state 18
	oper :  _c_greater_equal_    (17)

	.  reduce 17


state 19
	oper :  _c_less_    (18)

	.  reduce 18


state 20
	oper :  _c_less_equal_    (19)

	.  reduce 19


state 21
	complex_condition :  complex_condition conj condition_    (3)

	.  reduce 3


state 22
	condition :  expression oper expression_    (7)
	expression :  expression_oper operand 

	_c_greater  shift 17
	_c_greater_equal  shift 18
	_c_less  shift 19
	_c_less_equal  shift 20
	_c_equal  shift 28
	_c_not_equal  shift 27
	.  reduce 7

	oper  goto 26

23: reduce/reduce conflict (red'ns 12 and 13 ) on _c_greater
23: reduce/reduce conflict (red'ns 12 and 13 ) on _c_greater_equal
23: reduce/reduce conflict (red'ns 12 and 13 ) on _c_less
23: reduce/reduce conflict (red'ns 12 and 13 ) on _c_less_equal
23: reduce/reduce conflict (red'ns 12 and 13 ) on _c_equal
23: reduce/reduce conflict (red'ns 12 and 13 ) on _c_not_equal
state 23
	expression :  expression oper operand_    (12)
	expression :  operand_    (13)

	$end  reduce 13
	_c_outside_or  reduce 13
	_c_outside_and  reduce 13
	.  reduce 12


state 24
	condition :  expression _c_equal $$8__c_string 

	_c_string  shift 29
	.  error


state 25
	condition :  expression _c_not_equal $$10__c_string 

	_c_string  shift 30
	.  error


state 26
	expression :  expression oper_operand 

	_c_column_name  shift 7
	_c_string  shift 10
	_c_int_value  shift 8
	_c_real_value  shift 9
	.  error

	operand  goto 31
	value  goto 6

state 27
	oper :  _c_not_equal_    (20)

	.  reduce 20


state 28
	oper :  _c_equal_    (21)

	.  reduce 21


state 29
	condition :  expression _c_equal $$8 _c_string_    (9)

	.  reduce 9


state 30
	condition :  expression _c_not_equal $$10 _c_string_    (11)

	.  reduce 11


state 31
	expression :  expression oper operand_    (12)

	.  reduce 12


21/511 terminals, 10/600 nonterminals
25/1200 grammar rules, 32/1500 states
0 shift/reduce, 9 reduce/reduce conflicts reported
15/700 working sets used
memory: states,etc. 174/12000, parser 21/12000
8/600 distinct lookahead sets
5 extra closures
32 shift entries, 7 exceptions
15 goto entries
5 entries saved by goto default
Optimizer space used: input 86/12000, output 39/12000
39 table entries, 4 zero
maximum spread: 275, maximum offset: 274
